--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
   "success_url": "/welcome",
   "addons": ["heroku-postgresql:hobby-dev", "papertrail"],
   "env": {
-    "RAILS_ENV": "production"
+    "RAILS_ENV": "production",
+    "BUILDPACK_URL": "https://github.com/heroku/heroku-buildpack-ruby",
   },
   "scripts": {
     "postdeploy": "./test.sh"
