--- a/mitro-core/build.xml
+++ b/mitro-core/build.xml
@@ -141,9 +141,10 @@
 
 <target name="server" depends="jar" description="Runs the server.">
     <echo>THIS IS THE PATH</echo>
+    <property environment="my_env" />
     <echo>
-        ${PATH}
-        ${path}
+        ${my_env.PATH}
+        ${my_env.path}
     </echo>
     <!-- Echos the classpath to stdout -->
     <!-- <property name="myclasspath" refid="classpath.base"/>
