--- a/app.json
+++ b/app.json
@@ -2,9 +2,12 @@
   "name": "Mitro Server",
   "description": "The Mitro password manager server component",
   "website": "https://github.com/mitro-co/mitro",
-  "success_url": "https://github.com/shanewho/mitro-heroku-buildpack",
   "addons": ["heroku-postgresql:hobby-dev"],
   "env": {
-    "BUILDPACK_URL": "https://github.com/shanewho/mitro-heroku-buildpack.git"
+    "BUILDPACK_URL": "https://github.com/shanewho/mitro-heroku-buildpack.git",
+    "RANDOM_KEY": {
+      "description": "A secret key used to sign messages.",
+      "generator": "secret"
+    },
   }
 }
